move the build plugins to parent pom.xml file